ASP.NET Web and API Create

--- a/PlanetDatabase.Web/Areas/HelpPage/Views/Help/Api.cshtml
+++ b/PlanetDatabase.Web/Areas/HelpPage/Views/Help/Api.cshtml
@@ -1,5 +1,5 @@
 @using System.Web.Http
-@using PlanetDatabase.Areas.HelpPage.Models
+@using PlanetDatabase.Web.Areas.HelpPage.Models
 @model HelpPageApiModel
 
 @{
