--- a/PlanetDatabase.Web/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
+++ b/PlanetDatabase.Web/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
@@ -1,8 +1,8 @@
 @using System.Web.Http
 @using System.Web.Http.Controllers
 @using System.Web.Http.Description
-@using PlanetDatabase.Areas.HelpPage
-@using PlanetDatabase.Areas.HelpPage.Models
+@using PlanetDatabase.Web.Areas.HelpPage
+@using PlanetDatabase.Web.Areas.HelpPage.Models
 @model IGrouping<HttpControllerDescriptor, ApiDescription>
 
 @{
