--- a/PlanetDatabase.Web/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
+++ b/PlanetDatabase.Web/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
@@ -1,4 +1,4 @@
-@using PlanetDatabase.Areas.HelpPage
+@using PlanetDatabase.Web.Areas.HelpPage
 @model InvalidSample
 
 @if (HttpContext.Current.IsDebuggingEnabled)
