--- a/PlanetDatabase.Web/Areas/HelpPage/Views/Help/DisplayTemplates/CollectionModelDescription.cshtml
+++ b/PlanetDatabase.Web/Areas/HelpPage/Views/Help/DisplayTemplates/CollectionModelDescription.cshtml
@@ -1,4 +1,4 @@
-@using PlanetDatabase.Areas.HelpPage.ModelDescriptions
+@using PlanetDatabase.Web.Areas.HelpPage.ModelDescriptions
 @model CollectionModelDescription
 @if (Model.ElementDescription is ComplexTypeModelDescription)
 {
