--- a/PlanetDatabase.Web/Areas/HelpPage/Views/Help/DisplayTemplates/EnumTypeModelDescription.cshtml
+++ b/PlanetDatabase.Web/Areas/HelpPage/Views/Help/DisplayTemplates/EnumTypeModelDescription.cshtml
@@ -1,4 +1,4 @@
-@using PlanetDatabase.Areas.HelpPage.ModelDescriptions
+@using PlanetDatabase.Web.Areas.HelpPage.ModelDescriptions
 @model EnumTypeModelDescription
 
 <p>Possible enumeration values:</p>
