--- a/PlanetDatabase.Web/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
+++ b/PlanetDatabase.Web/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
@@ -1,7 +1,7 @@
 @using System.Web.Http
 @using System.Web.Http.Description
-@using PlanetDatabase.Areas.HelpPage.Models
-@using PlanetDatabase.Areas.HelpPage.ModelDescriptions
+@using PlanetDatabase.Web.Areas.HelpPage.Models
+@using PlanetDatabase.Web.Areas.HelpPage.ModelDescriptions
 @model HelpPageApiModel
 
 @{
