--- a/PlanetDatabase.Web/Areas/HelpPage/Views/Help/DisplayTemplates/SimpleTypeModelDescription.cshtml
+++ b/PlanetDatabase.Web/Areas/HelpPage/Views/Help/DisplayTemplates/SimpleTypeModelDescription.cshtml
@@ -1,3 +1,3 @@
-@using PlanetDatabase.Areas.HelpPage.ModelDescriptions
+@using PlanetDatabase.Web.Areas.HelpPage.ModelDescriptions
 @model SimpleTypeModelDescription
 @Model.Documentation
