--- a/PlanetDatabase.Web/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/PlanetDatabase.Web/Areas/HelpPage/Views/Help/Index.cshtml
@@ -2,7 +2,7 @@
 @using System.Web.Http.Controllers
 @using System.Web.Http.Description
 @using System.Collections.ObjectModel
-@using PlanetDatabase.Areas.HelpPage.Models
+@using PlanetDatabase.Web.Areas.HelpPage.Models
 @model Collection<ApiDescription>
 
 @{
