--- a/PlanetDatabase.Web/Areas/HelpPage/Views/Help/ResourceModel.cshtml
+++ b/PlanetDatabase.Web/Areas/HelpPage/Views/Help/ResourceModel.cshtml
@@ -1,5 +1,5 @@
 @using System.Web.Http
-@using PlanetDatabase.Areas.HelpPage.ModelDescriptions
+@using PlanetDatabase.Web.Areas.HelpPage.ModelDescriptions
 @model ModelDescription
 
 <link type="text/css" href="~/Areas/HelpPage/HelpPage.css" rel="stylesheet" />
