--- a/PlanetDatabase.Web/Views/Home/Index.cshtml
+++ b/PlanetDatabase.Web/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="jumbotron">
+﻿@using PlanetDatabase.Model
+@model IEnumerable<Planet>
+<div class="jumbotron">
     <h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
@@ -6,9 +8,11 @@
 <div class="row">
     <div class="col-md-4">
         <h2>Getting started</h2>
-        <p>ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
-        a broad range of clients, including browsers and mobile devices. ASP.NET Web API
-        is an ideal platform for building RESTful applications on the .NET Framework.</p>
+        <p>
+            ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
+            a broad range of clients, including browsers and mobile devices. ASP.NET Web API
+            is an ideal platform for building RESTful applications on the .NET Framework.
+        </p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
@@ -22,3 +26,42 @@
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
     </div>
 </div>
+<div class="row">
+    <div class="col-md-8">
+        <h2>Getting started</h2>
+        <div class="panel panel-default">
+            <div class="panel-heading">Panel heading without title</div>
+            <div class="panel-body">
+                Panel content
+            </div>
+            <div class="panel-body">
+                Panel content
+            </div>
+            <div class="panel-body">
+                Panel content
+            </div>
+            <div class="panel-body">
+                Panel content
+            </div>
+        </div>
+        <table id="planetsDataTable" style="display: none">
+            <tr>
+                <th>@Html.DisplayNameFor(m => m.Id)</th>
+                <th>@Html.DisplayNameFor(m => m.Name)</th>
+                <th>@Html.DisplayNameFor(m => m.AwayOfStar)</th>
+            </tr>
+
+        </table>
+        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a></p>
+    </div>
+
+    <div class="col-md-4">
+        <h2>Test</h2>
+        <p>...text...</p>
+        @*<p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>*@
+    </div>
+</div>
+
+@section JavaScript{
+    <script src="~/Scripts/Views/Home.Index.js"></script>
+}
