--- a/PlanetDatabase.Web/Views/Shared/_Layout.cshtml
+++ b/PlanetDatabase.Web/Views/Shared/_Layout.cshtml
@@ -36,6 +36,6 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+    @RenderSection("JavaScript", required: false)
 </body>
 </html>
