--- a/PlanetDatabase.Web/Views/Home/Index.cshtml
+++ b/PlanetDatabase.Web/Views/Home/Index.cshtml
@@ -1,66 +1,41 @@
 ﻿@using PlanetDatabase.Model
 @model IEnumerable<Planet>
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Welcome to PlanetDatabase.com</h1>
+    @*<p class="lead">This project source-code in github.</p>
+    <p><a href="https://github.com/fzani/PlanetDatabase.com" class="btn btn-primary btn-lg">Source &raquo;</a></p>*@
 </div>
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>List of planets</h2>
         <p>
-            ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
-            a broad range of clients, including browsers and mobile devices. ASP.NET Web API
-            is an ideal platform for building RESTful applications on the .NET Framework.
+            Please see the list of planets in
+            our solar system on the right
+            hand side
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a></p>
+        <p>@*<a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a>*@</p>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
-    </div>
-</div>
-<div class="row">
     <div class="col-md-8">
-        <h2>Getting started</h2>
+        <h2></h2>
         <div class="panel panel-default">
-            <div class="panel-heading">Panel heading without title</div>
-            <div class="panel-body">
-                Panel content
-            </div>
-            <div class="panel-body">
-                Panel content
-            </div>
-            <div class="panel-body">
-                Panel content
-            </div>
-            <div class="panel-body">
-                Panel content
-            </div>
+            <!-- Default panel contents -->
+            <div class="panel-heading">** Scale: 1 cm = 10 million km</div>
+            @*<div class="panel-body">
+                    <p>...</p>
+                </div>*@
+            <table id="planetsDataTable" class="table-hoverred">
+                <tr>
+                    @*<th>@Html.DisplayNameFor(m => m.Id)</th>*@
+                    <th>@Html.DisplayNameFor(m => m.Name)</th>
+                    <th>@Html.DisplayNameFor(m => m.AwayOfStar) cm</th>
+                </tr>
+            </table>
+            <p>@*<a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a>*@</p>
         </div>
-        <table id="planetsDataTable" style="display: none">
-            <tr>
-                <th>@Html.DisplayNameFor(m => m.Id)</th>
-                <th>@Html.DisplayNameFor(m => m.Name)</th>
-                <th>@Html.DisplayNameFor(m => m.AwayOfStar)</th>
-            </tr>
 
-        </table>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a></p>
-    </div>
-
-    <div class="col-md-4">
-        <h2>Test</h2>
-        <p>...text...</p>
-        @*<p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>*@
     </div>
 </div>
+
 
 @section JavaScript{
     <script src="~/Scripts/Views/Home.Index.js"></script>
