--- a/PlanetDatabase.Web/Views/Home/Index.cshtml
+++ b/PlanetDatabase.Web/Views/Home/Index.cshtml
@@ -23,9 +23,8 @@
             @*<div class="panel-body">
                     <p>...</p>
                 </div>*@
-            <table id="planetsDataTable" class="table-hoverred">
+            <table id="planetsDataTable" class="table table-striped table-hover">
                 <tr>
-                    @*<th>@Html.DisplayNameFor(m => m.Id)</th>*@
                     <th>@Html.DisplayNameFor(m => m.Name)</th>
                     <th>@Html.DisplayNameFor(m => m.AwayOfStar) cm</th>
                 </tr>
